--- a/styles/style.css
+++ b/styles/style.css
@@ -21,6 +21,7 @@ body {
 }
 
 .nav-bar {
+    top: 0;
     position: fixed;
     height: 100px;
     box-sizing: border-box;
@@ -111,13 +112,11 @@ p {
 
 #benefits {
     display: flex;
-    align-item: flex-start;
+    align-items: flex-start;
     flex-wrap: wrap;
     text-align: center;
     flex: 1;
-    padding-left: 7%;
-    padding-right: 7%;
-    padding-bottom: 7%;
+    padding: 0 7% 7%; 7%
 }
 
 #whats-on {
@@ -159,6 +158,7 @@ p {
 #text-part h2 {
     border-bottom: solid white 3px;
     padding: 0 0 1px;
+    width: fit-content;
 }
 
 #text-part {
